# realtime-emotion-detection

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
assets/models/: README.md
docs/: PORTFOLIO.md
scripts/: activate_env.sh  build_better_model.cmd  check.cmd  check.sh  download_data.cmd  download_data.sh  evaluate_model.cmd  evaluate_model.sh  run_app.cmd  run_app.sh  run_live.sh  smoke_pipeline.sh  train_model.cmd  train_model.sh
src/emotion_detection/: __init__.py  app.py  camera.py  config.py  dataset.py  doctor.py  emotion_model.py  evaluation.py  face_detection.py  inference.py  models.py  preprocessing.py  reporting.py  session.py  training.py
tests/: test_config.py  test_dataset.py  test_emotion_model.py  test_models.py  test_reporting.py
